@@ -4,6 +4,7 @@ v5.1.9
 - Fixed - inline style removal for columns/column/group to avoid removing for child elements (fixes issue where you need to have inline style)
 - Fixed - CSS dropcap for paragraph
 - Fixed - WPSEO template name for author box
+- Fixed - Post Author block duotone and show avatar if set (or icon if not)
 
 v5.1.8
 - Removed - Gutenberg 'block-templates' support declaration - is added by default for block based themes
